--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "pip": "0.0.1",
     "react": "^17.0.1",
     "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -40,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://projectdd-env.eba-ny7u22vm.us-east-1.elasticbeanstalk.com"
 }
